--- a/test/molecule-role/molecule/kubernetes/files/receiver/docker-compose.yml
+++ b/test/molecule-role/molecule/kubernetes/files/receiver/docker-compose.yml
@@ -3,43 +3,73 @@ version: '2.4'
 
 services:
   zookeeper:
-    extends:
-      file: docker-compose.base.yml
-      service: zookeeper
+    image: wurstmeister/zookeeper
+    ports:
+      - 2181:2181
+    mem_limit: 1G
+    healthcheck:
+      test: [ "CMD-SHELL", "echo ruok | nc -w 2 zookeeper 2181" ]
+      interval: 5s
+      timeout: 10s
+      retries: 3
 
   kafka:
+    image: wurstmeister/kafka:2.12-2.3.1
+    ports:
+      - 9092:9092
     depends_on:
       zookeeper:
         condition: service_healthy
-    extends:
-      file: docker-compose.base.yml
-      service: kafka
     environment:
+      KAFKA_ADVERTISED_HOST_NAME: kafka
+      KAFKA_ADVERTISED_PORT: 9092
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_CREATE_TOPICS: "sts_connection_beat_events:1:1,sts_correlate_endpoints:1:1,sts_generic_events:1:1,sts_intake_health:1:1,sts_multi_metrics:1:1,sts_state_events:1:1,sts_topology_events:1:1,sts_topo_process_agents:1:1,sts_trace_events:1:1,sts_topo_kubernetes_${CLUSTER_NAME}:1:1"
+    volumes:
+      - "./verify-or-create-topics.sh:/usr/local/bin/verify-or-create-topics.sh"
+    healthcheck:
+      test: [ "CMD", "verify-or-create-topics.sh" ]
+      interval: 10s
+      timeout: 45s
+      retries: 10
+    restart: always
+    mem_limit: 1G
 
   receiver:
+    image: "quay.io/stackstate/stackstate-receiver:${STACKSTATE_BRANCH}"
+    ports:
+      - 7077:7077
+      - 1618:1618
     depends_on:
       kafka:
         condition: service_healthy
-    extends:
-      file: docker-compose.base.yml
-      service: receiver
+    environment:
+      KAFKA_BROKERS: kafka:9092
+    restart: always
+    mem_limit: 1G
 
   correlate:
+    image: "quay.io/stackstate/stackstate-correlate:${STACKSTATE_BRANCH}"
     depends_on:
       kafka:
         condition: service_healthy
-    extends:
-      file: docker-compose.base.yml
-      service: correlate
+    environment:
+      KAFKA_BROKERS: kafka:9092
+    restart: always
+    mem_limit: 1G
 
   topic-api:
+    image: "quay.io/stackstate/stackstate-topic-api:${STACKSTATE_BRANCH}"
+    ports:
+      - 7070:7070
     depends_on:
       kafka:
         condition: service_healthy
-    extends:
-      file: docker-compose.base.yml
-      service: topic-api
+    environment:
+      KAFKA_BROKERS: kafka:9092
+      ZOOKEEPER_QUORUM: kafka
+    restart: always
+    mem_limit: 1G
 
   nginx:
     image: nginx:1.14.2
