--- a/test/molecule-role/molecule/integrations/playbook.prepare.yml
+++ b/test/molecule-role/molecule/integrations/playbook.prepare.yml
@@ -11,15 +11,7 @@
     - include_tasks: ../common/receiver/tasks/copy-nagios-files.yml
     - include_tasks: ../common/receiver/tasks/copy-agent-integration-config-files.yml
     - include_tasks: ../common/receiver/tasks/gather-facts.yml
-
-    - name: Configure .env file used by docker-compose
-      copy:
-        content: |
-          AGENT_DOCKER_REPO={{ agent_docker_repo }}
-          AGENT_VERSION={{ agent_current_branch }}
-          STACKSTATE_BRANCH={{ stackstate_branch }}
-        dest: /home/ubuntu/.env
-
+    - include_tasks: ../common/receiver/tasks/configure-env-for-docker-compose.yml
     - include_tasks: ../common/receiver/tasks/run-docker-compose.yml
     - include_tasks: ../wait-for-receiver.yml
     - include_tasks: ../wait-for-agent.yml
