--- a/test/molecule-role/molecule/kubernetes/playbook.create.yml
+++ b/test/molecule-role/molecule/kubernetes/playbook.create.yml
@@ -6,6 +6,7 @@
   vars_files:
     - ../common/create/vars.yml
   vars:
+    ssh_port: 22
     security_group_name: molecule_kubernetes
     security_group_description: Agent v2 Molecule testing running on kubernetes
     security_group_rules:
@@ -32,6 +33,11 @@
       - proto: icmp
         from_port: 8
         to_port: -1
+        cidr_ip: '0.0.0.0/0'
+    security_group_rules_egress:
+      - proto: -1
+        from_port: 0
+        to_port: 0
         cidr_ip: '0.0.0.0/0'
   tasks:
     - include_tasks: ../common/create/tasks.yml
