--- a/test/molecule-role/molecule/vms/playbook.create.yml
+++ b/test/molecule-role/molecule/vms/playbook.create.yml
@@ -3,9 +3,8 @@
   hosts: localhost
   connection: local
   gather_facts: false
-  vars_files:
-    - ../common/create/vars.yml
   vars:
+    ssh_port: 22
     winrm_http_port: 5985
     winrm_https_port: 5986
     winrm_rdp_port: 3389
@@ -15,14 +14,6 @@
       - proto: tcp
         from_port: "{{ ssh_port }}"
         to_port: "{{ ssh_port }}"
-        cidr_ip: '0.0.0.0/0'
-      - proto: tcp
-        from_port: 7070  # StackState Topic API port
-        to_port: 7070
-        cidr_ip: '0.0.0.0/0'
-      - proto: icmp
-        from_port: 8
-        to_port: -1
         cidr_ip: '0.0.0.0/0'
       - proto: tcp
         from_port: "{{ winrm_http_port }}"
@@ -35,6 +26,10 @@
       - proto: tcp
         from_port: "{{ winrm_rdp_port }}"
         to_port: "{{ winrm_rdp_port }}"
+        cidr_ip: '0.0.0.0/0'
+      - proto: tcp
+        from_port: 7077  # StackState Receiver API port
+        to_port: 7077
         cidr_ip: '0.0.0.0/0'
       - proto: tcp
         from_port: 7070  # StackState Topic API port
@@ -63,6 +58,15 @@
       - proto: tcp
         from_port: "{{ dnat_service_port }}"
         to_port: "{{ dnat_service_port }}"
+        cidr_ip: '0.0.0.0/0'
+      - proto: icmp
+        from_port: 8
+        to_port: -1
+        cidr_ip: '0.0.0.0/0'
+    security_group_rules_egress:
+      - proto: -1
+        from_port: 0
+        to_port: 0
         cidr_ip: '0.0.0.0/0'
   tasks:
     - include_tasks: ../common/create/tasks.yml
