--- a/test/molecule-role/molecule/vms/molecule.yml
+++ b/test/molecule-role/molecule/vms/molecule.yml
@@ -70,9 +70,9 @@ provisioner:
     defaults:
       any_errors_fatal: true
   playbooks:
-    create: playbook.create.yml
-    destroy: playbook.destroy.yml
-    prepare: playbook.prepare.yml
+    create: create.yml
+    destroy: destroy.yml
+    prepare: prepare.yml
   inventory:
     links:
       group_vars: group_vars/
