--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -873,6 +873,7 @@ release_deb:
 
 release_rpm:
   stage: release
+  image: docker.io/stackstate/stackstate-agent-runner-gitlab:deb-rpmpublisher
   dependencies:
     - build_rpm
   before_script:
@@ -908,7 +909,8 @@ release_win:
     - Copy-Item $filename -Destination stackstate-agent-latest-1-x86_64.msi
     - inv release.generate-install
     - aws.exe s3 cp . s3://%STS_AWS_RELEASE_BUCKET_WIN%/windows/stable --recursive --exclude "*" --include "*.msi" --acl public-read
-    - cd %WIN_CI_PROJECT_DIR%/cmd/agent && aws.exe s3 cp . s3://%STS_AWS_RELEASE_BUCKET_WIN% --recursive --exclude "*" --include "install.ps1" --acl public-read
+    - cd %WIN_CI_PROJECT_DIR%/cmd/agent
+    - aws.exe s3 cp . s3://%STS_AWS_RELEASE_BUCKET_WIN% --recursive --exclude "*" --include "install.ps1" --acl public-read
   when: manual
   only:
     - tags
