--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 # python development requirements for Agent 6
 invoke==1.0.0
 reno==2.9.2
-dulwich==0.19.16
+# dulwich==0.19.16
+dulwich<=0.20.18
 docker==3.7.3
-requests==2.23.0
-PyYAML==5.4.1
+requests==2.25.0
+PyYAML==5.4
 toml==0.9.4
