try new runner image

--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -1,4 +1,4 @@
-image: docker.io/stackstate/stackstate-agent-runner-gitlab:latest7
+image: docker.io/stackstate/stackstate-agent-runner-gitlab:new-latest7
 
 stages:
   - prepare
