pipeline improvements / fixes

--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -50,21 +50,23 @@ stages:
   New-Item -ItemType SymbolicLink -Path "$Env:GOPATH\\src\\github.com\\StackVista\\stackstate-agent" -Target $current_dir -Force
 
 .rules:
-  - &only_agent_3
-    if: $MAJOR_VERSION == "3"
-  - &only_agent_3_always
-    if: $MAJOR_VERSION == "3"
+  # rules specific to the cluster agent, kubernetes, docker swarm. Currently we default to only running them on Python2
+  # build so that we can release the cluster agent as part of a V2 release.
+  # TODO: Change this when V3 releases are finalized and the default.
+  - &cluster_agent
+    if: $MAJOR_VERSION == "2"
+  - &cluster_agent_always
+    if: $MAJOR_VERSION == "2"
     when: always
-  - &only_agent_3_on_success
-    if: $MAJOR_VERSION == "3"
+  - &cluster_agent_on_success
+    if: $MAJOR_VERSION == "2"
     when: on_success
-  - &only_agent_3_on_failure
-    if: $MAJOR_VERSION == "3"
+  - &cluster_agent_on_failure
+    if: $MAJOR_VERSION == "2"
     when: on_failure
-  - &only_agent_3_release
-    if: $MAJOR_VERSION == "3" && ($CI_COMMIT_TAG || $CI_JOB_TRIGGERED == "true")
+  - &cluster_agent_release
+    if: $MAJOR_VERSION == "2" && ($CI_COMMIT_TAG || $CI_JOB_TRIGGERED == "true")
     when: manual
-
 ######################### /pipeline bricks
 
 
@@ -249,7 +251,7 @@ unit_tests_cluster_agent:
   tags:
     - sts-aws
   rules:
-    - *only_agent_3
+    - *cluster_agent
   retry:
     max: 2
 
@@ -312,7 +314,7 @@ build_cluster_agent:
       - $CI_PROJECT_DIR/Dockerfiles/cluster-agent/stackstate-cluster.yaml
       - $CI_PROJECT_DIR/version.txt
   rules:
-    - *only_agent_3
+    - *cluster_agent
   retry:
     max: 2
     when:
@@ -626,7 +628,7 @@ pre_release_trace_agent_image:
     - cp ./outcomes/binary/trace-agent Dockerfiles/trace-agent
     - ./omnibus/package-scripts/publish_image.sh $CI_COMMIT_REF_NAME $STS_DOCKER_TEST_REPO_TRACE $CI_PROJECT_DIR/Dockerfiles/trace-agent $CI_COMMIT_SHORT_SHA
   rules:
-    - *only_agent_3
+    - *cluster_agent
 
 pre_release_cluster_agent_image:
   <<: *pre_release_image
@@ -639,7 +641,7 @@ pre_release_cluster_agent_image:
     - cp -r ./bin/stackstate-cluster-agent* ./Dockerfiles/cluster-agent
     - ./omnibus/package-scripts/publish_image.sh $CI_COMMIT_REF_NAME $STS_DOCKER_TEST_REPO_CLUSTER $CI_PROJECT_DIR/Dockerfiles/cluster-agent $CI_COMMIT_SHORT_SHA
   rules:
-    - *only_agent_3
+    - *cluster_agent
 
 # Core Molecule Structure for all the molecule steps
 .molecule: &molecule
@@ -819,8 +821,10 @@ molecule_integrations_success_cleanup:
 # TODO: Split into two stages instead of one test stage, Unit Test fails SSH when split debug required
 
 .molecule_kubernetes_rule:
+  # Currently we default to only running on Python2 build.
+  # TODO: Change this when V3 releases are finalized and the default.
   - &kubernetes_ignore_rule
-    if: $MAJOR_VERSION == "3" && $CI_COMMIT_MESSAGE =~ /\[molecule\-/ && $CI_COMMIT_MESSAGE !~ /\[molecule\-kubernetes]/
+    if: $MAJOR_VERSION == "2" && $CI_COMMIT_MESSAGE =~ /\[molecule\-/ && $CI_COMMIT_MESSAGE !~ /\[molecule\-kubernetes]/
     when: never
 
 molecule_kubernetes_test:
@@ -841,7 +845,7 @@ molecule_kubernetes_test:
     expire_in: 1 week
   rules:
     - *kubernetes_ignore_rule
-    - *only_agent_3
+    - *cluster_agent
 
 molecule_kubernetes_cleanup:
   <<: *molecule
@@ -855,7 +859,7 @@ molecule_kubernetes_cleanup:
     - molecule_kubernetes_test
   rules:
     - *kubernetes_ignore_rule
-    - *only_agent_3_always
+    - *cluster_agent_always
 
 
 # Job Seq: Molecule
@@ -999,8 +1003,10 @@ molecule_secrets_success_cleanup:
 # Type: swarm
 
 .molecule_swarm_rule:
+  # Currently we default to only running on Python2 build.
+  # TODO: Change this when V3 releases are finalized and the default.
   - &swarm_ignore_rule
-    if: $MAJOR_VERSION == "3" && $CI_COMMIT_MESSAGE =~ /\[molecule\-/ && $CI_COMMIT_MESSAGE !~ /\[molecule\-swarm]/
+    if: $MAJOR_VERSION == "2" && $CI_COMMIT_MESSAGE =~ /\[molecule\-/ && $CI_COMMIT_MESSAGE !~ /\[molecule\-swarm]/
     when: never
 
 molecule_swarm_create:
@@ -1008,7 +1014,7 @@ molecule_swarm_create:
   <<: *molecule_create
   rules:
     - *swarm_ignore_rule
-    - *only_agent_3_always
+    - *cluster_agent_always
   variables:
     MOLECULE_SCENARIO: swarm
     MOLECULE_EPHEMERAL_DIRECTORY: $CI_PROJECT_DIR/tmp_molecule_inventory
@@ -1018,7 +1024,7 @@ molecule_swarm_test:
   <<: *molecule_test
   rules:
     - *swarm_ignore_rule
-    - *only_agent_3_on_success
+    - *cluster_agent_on_success
   dependencies:
     - molecule_swarm_create
   variables:
@@ -1036,7 +1042,7 @@ molecule_swarm_failure_cleanup:
   <<: *molecule_destroy
   rules:
     - *swarm_ignore_rule
-    - *only_agent_3_on_failure
+    - *cluster_agent_on_failure
   needs:
     - molecule_swarm_create
     - molecule_swarm_test
@@ -1048,7 +1054,7 @@ molecule_swarm_success_cleanup:
   <<: *molecule_destroy
   rules:
     - *swarm_ignore_rule
-    - *only_agent_3_on_success
+    - *cluster_agent_on_success
   dependencies:
     - molecule_swarm_create
     - molecule_swarm_test
@@ -1237,7 +1243,7 @@ release_trace_agent_image:
     - cp ./outcomes/binary/trace-agent Dockerfiles/trace-agent
     - ./omnibus/package-scripts/publish_image.sh $VERSION $STS_DOCKER_RELEASE_REPO_TRACE $CI_PROJECT_DIR/Dockerfiles/trace-agent latest
   rules:
-    - *only_agent_3_release
+    - *cluster_agent_release
 
 release_cluster_agent_image:
   <<: *base_release_image
@@ -1250,4 +1256,4 @@ release_cluster_agent_image:
     - cp -r ./bin/stackstate-cluster-agent/* ./Dockerfiles/cluster-agent
     - ./omnibus/package-scripts/publish_image.sh $VERSION $STS_DOCKER_RELEASE_REPO_CLUSTER $CI_PROJECT_DIR/Dockerfiles/cluster-agent latest
   rules:
-    - *only_agent_3_release
+    - *cluster_agent_release
