--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 # python development requirements for Agent 6
 invoke==1.0.0
 reno==2.9.2
-# dulwich==0.19.16
-dulwich<=0.20.18
+dulwich==0.19.16
 docker==3.7.3
 requests==2.25.0
-PyYAML==5.4
+PyYAML==5.4.1
 toml==0.9.4
