Added raw metrics start & stop snapshot & integrations implementation

--- a/rtloader/test/CMakeLists.txt
+++ b/rtloader/test/CMakeLists.txt
@@ -13,7 +13,7 @@ set(PKGS
 	"../../test/containers/..."
 	"../../test/topology/..."
 	"../../test/telemetry/..."
-	"../../test/rawmetrics/..."
+	"../../test/raw_metrics/..."
 	"../../test/health/..."
 )
 
