Updated missed images in the gitlab

--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -152,7 +152,7 @@ deps_deb:
 deps_rpm:
   stage: prepare
   interruptible: true
-  image: docker.io/stackstate/stackstate-agent-runner-gitlab:centos6_latest_v7
+  image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:centos6_latest_v7
   cache:
     key: "deps-rpm-$STS_VER-$CI_COMMIT_REF_SLUG"
     paths:
@@ -403,7 +403,7 @@ build_deb:
 build_rpm:
   stage: build
   interruptible: true
-  image: docker.io/stackstate/stackstate-agent-runner-gitlab:centos6_latest_v7
+  image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:centos6_latest_v7
   needs:
     - deps_rpm
   tags:
@@ -511,7 +511,7 @@ test_deb_renaming:
 test_rpm_renaming:
   stage: test
   interruptible: true
-  image: docker.io/stackstate/stackstate-agent-runner-gitlab:centos6_20190429
+  image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:centos6_20190429
   needs:
     - build_rpm
   before_script: []
@@ -579,7 +579,7 @@ pre_release_win:
 pre_release_rpm:
   stage: pre_release
   interruptible: true
-  image: docker.io/stackstate/stackstate-agent-runner-gitlab:deb-rpmpublisher
+  image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:deb-rpmpublisher
   needs:
     - build_rpm
   before_script: []
@@ -594,7 +594,7 @@ pre_release_rpm:
 
 pre_release_main_agent_image: &pre_release_image
   stage: pre_release
-  image: docker:18.06.0
+  image: artifactory.stackstate.io/docker-virtual/docker:18.06.0
   needs:
     - build_deb
   variables:
@@ -1145,7 +1145,7 @@ release_deb:
 release_rpm:
   interruptible: true
   stage: release
-  image: docker.io/stackstate/stackstate-agent-runner-gitlab:deb-rpmpublisher
+  image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:deb-rpmpublisher
   dependencies:
     - build_rpm
   before_script:
@@ -1197,7 +1197,7 @@ release_win:
 
 .base_release_image: &base_release_image
   stage: release
-  image: docker:18.06.0
+  image: artifactory.stackstate.io/docker-virtual/docker:18.06.0
   dependencies:
     - build_deb
   variables:
