--- a/.gitlab-ci-cluster-agent.yml
+++ b/.gitlab-ci-cluster-agent.yml
@@ -202,7 +202,7 @@ pre_release_deb:
 pre_release_main_agent_image: &pre_release_image
   stage: pre_release
   interruptible: true
-  image: docker:18.06.0
+  image: artifactory.stackstate.io/docker-virtual/docker:18.06.0
   needs:
     - build_deb
   variables:
