--- a/.gitlab-ci-cluster-agent.yml
+++ b/.gitlab-ci-cluster-agent.yml
@@ -210,7 +210,8 @@ pre_release_main_agent_image: &pre_release_image
     DOCKER_HOST: tcp://docker:2375
     DOCKER_TLS_CERTDIR: ""
   services:
-    - docker:18.09-dind
+    - name: artifactory.stackstate.io/docker-virtual/docker:18.09-dind
+      alias: docker
   before_script: []
   script:
     - cd $CI_PROJECT_DIR
