--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -659,15 +659,19 @@ pre_release_cluster_agent_image:
 
 # Base artifacts for create and test steps
 .molecule_artifacts: &molecule_artifacts
-  artifacts:
-    when: always
+  cache:
+    key: $CI_COMMIT_REF_SLUG
     paths:
-      - $CI_PROJECT_DIR/test/molecule-role/molecule/$MOLECULE_SCENARIO/topic-*.json
-      - $CI_PROJECT_DIR/test/molecule-role/molecule/$MOLECULE_SCENARIO/*.log
-      - $CI_PROJECT_DIR/tmp_molecule_inventory
-      - $CI_PROJECT_DIR/.molecule
-      - $MOLECULE_EPHEMERAL_DIRECTORY
-    expire_in: 1 week
+      - .molecule/$MOLECULE_SCENARIO/
+
+  # artifacts:
+  #   when: always
+  #   paths:
+  #     - $CI_PROJECT_DIR/test/molecule-role/molecule/$MOLECULE_SCENARIO/topic-*.json
+  #     - $CI_PROJECT_DIR/test/molecule-role/molecule/$MOLECULE_SCENARIO/*.log
+  #     - $CI_PROJECT_DIR/.molecule
+  #     - $MOLECULE_EPHEMERAL_DIRECTORY
+  #   expire_in: 1 week
 
 # Primary create steps for all the molecule builds
 .molecule_create: &molecule_create
