[molecule-compose][py3] Test: Add a print for the ssh key and add tmp_molecule_inventory to cache root

--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -663,6 +663,7 @@ pre_release_cluster_agent_image:
     key: $CI_COMMIT_REF_SLUG
     paths:
       - .molecule/$MOLECULE_SCENARIO/
+      - tmp_molecule_inventory/
 
   # artifacts:
   #   when: always
