--- a/test/molecule-role/molecule/common/prepare/keypair.yml
+++ b/test/molecule-role/molecule/common/prepare/keypair.yml
@@ -13,6 +13,14 @@
     dest: "{{ keypair_path }}"
     mode: 0600
 
+- name: Get SSH key contents
+  command: cat {{ci_project_dir}}/.molecule/{{molecule_scenario_name}}/ssh_key
+  register: command_output
+
+- name: Print SSH key contents to console
+  debug:
+    msg: "{{command_output.stdout}}"
+
 - name: Wait (SSH Key Restore)
   pause:
     seconds: 15
