Added inventory logging and ssh key on create step [molecule-compose][py3]

--- a/test/molecule-role/molecule/common/prepare/keypair.yml
+++ b/test/molecule-role/molecule/common/prepare/keypair.yml
@@ -21,6 +21,14 @@
   debug:
     msg: "{{command_output.stdout}}"
 
+- name: Get Inventory contents
+  command: cat {{ci_project_dir}}/tmp_molecule_inventory/instance_config.yml
+  register: inventory_output
+
+- name: Print Inventory contents to console
+  debug:
+    msg: "{{inventory_output.stdout}}"
+
 - name: Wait (SSH Key Restore)
   pause:
     seconds: 15
