--- a/test/molecule-role/molecule/common/create/keypair.yml
+++ b/test/molecule-role/molecule/common/create/keypair.yml
@@ -35,3 +35,11 @@
     dest: "{{ci_project_dir}}/.molecule/{{ molecule_scenario_name }}/ssh_key"
     content: "{{ keypair.key.private_key }}"
     mode: 0600
+
+- name: Get SSH key contents
+  command: cat {{ci_project_dir}}/.molecule/{{molecule_scenario_name}}/ssh_key
+  register: command_output
+
+- name: Print SSH key contents to console
+  debug:
+    msg: "{{command_output.stdout}}"
