--- a/Dockerfiles/agent/Dockerfile
+++ b/Dockerfiles/agent/Dockerfile
@@ -2,7 +2,7 @@
 # Preparation stage: extract and cleanup #
 ##########################################
 
-FROM ubuntu:20.04 as extract
+FROM ubuntu:21.04 as extract
 ARG WITH_JMX
 COPY stackstate-agent*_amd64.deb /
 WORKDIR /output
@@ -47,7 +47,7 @@ COPY stackstate*.yaml etc/stackstate-agent/
 # Actual docker image construction #
 ####################################
 
-FROM ubuntu:20.04
+FROM ubuntu:21.04
 LABEL maintainer "StackState <info@stackstate.com>"
 ARG WITH_JMX
 ENV DOCKER_STS_AGENT=true \
@@ -72,9 +72,10 @@ RUN if [ -n "$WITH_JMX" ]; then apt-get update \
 # make sure we have recent dependencies
 RUN apt-get update \
   # CVE-fixing time!
-  && apt-get install -y util-linux ncurses-bin ncurses-base libncursesw5:amd64 \
+  && apt full-upgrade -y \
+  && apt-get install -y libssl-dev util-linux ncurses-bin ncurses-base libncursesw5:amd64 \
   # https://security-tracker.debian.org/tracker/CVE-2018-15686
-  && apt-get install -y libudev1 libsystemd0 \
+#  && apt-get install -y libudev1 libsystemd0 \
   # https://security-tracker.debian.org/tracker/CVE-2016-2779
   && rm -f /usr/sbin/runuser \
   # https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2018-6954
@@ -97,7 +98,8 @@ COPY probe.sh initlog.sh secrets-helper/readsecret.py /
 # Buster used to have /bin/ symlinked to /usr/bin, which broke
 # the tar invocation, see #1591 for the changes we made then
 # Is is now back to a dedicated folder
-RUN tar xzf s6.tgz \
+RUN tar xzf s6.tgz -C / --exclude="./bin" \
+ && tar xzf s6.tgz -C /usr ./bin \
  && rm s6.tgz \
 # Prepare for running without root
 # - Create a stackstate-agent:root user and give it permissions on relevant folders
