--- a/Dockerfiles/cluster-agent/Dockerfile
+++ b/Dockerfiles/cluster-agent/Dockerfile
@@ -2,7 +2,7 @@
 # Preparation stage: layout and chmods #
 ########################################
 
-FROM ubuntu:20.04 as builder
+FROM ubuntu:21.04 as builder
 
 WORKDIR /output
 
@@ -22,16 +22,17 @@ RUN chmod 755 entrypoint.sh \
 # Actual docker image construction #
 ####################################
 
-FROM ubuntu:20.04
+FROM ubuntu:21.04
 
 LABEL maintainer "StackState <info@stackstate.com>"
 
 ENV PATH="/opt/stackstate-agent/bin/:$PATH"
 
 RUN apt-get update \
+ && apt full-upgrade -y \
  && apt-get install --no-install-recommends -y ca-certificates curl \
  # https://security-tracker.debian.org/tracker/CVE-2018-15686
- && apt-get install -y libudev1 libsystemd0 \
+# && apt-get install -y libudev1 libsystemd0 \
  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 COPY --from=builder /output /
