Fix batcher test

--- a/.assistance/Vagrantfile
+++ b/.assistance/Vagrantfile
@@ -116,6 +116,7 @@ Vagrant.configure("2") do |config|
     inv -e rtloader.clean
     invoke -e rtloader.make --python-runtimes "#{ENV['CONDA_VERSION']}"
     inv -e rtloader.test
+    # inv -e test --coverage --race --profile --fail-on-fmt --cpus 4 --major-version #{ENV['MAJOR_VERSION']} --python-runtimes #{ENV['PYTHON_RUNTIMES']}
   SCRIPT
 end
 
